# surface_splatting

./: CMakeLists.txt  surface_splattingConfig.cmake
cmake/: libs-anttweakbar.cmake  libs-eigen3.cmake  libs-glew.cmake  libs-opengl.cmake  libs-python.cmake  libs-sdl2.cmake  tools-compilers.cmake  tools-resources.cmake
cmake/Modules/: FindAntTweakBar.cmake  FindSDL2.cmake
glviz/: CMakeLists.txt
glviz/src/: buffer.hpp  camera.cpp  camera.hpp  glviz.cpp  glviz.hpp  program.cpp  shader.cpp  shader.hpp  utility.cpp  utility.hpp
glviz/src/shader/: mesh3_gs.glsl  mesh3_vs.glsl  sphere_fs.glsl  sphere_vs.glsl
surface_splatting/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  main.cpp  main_test.cpp  program_attribute.cpp  program_finalization.cpp  splat_renderer.cpp  splat_renderer.hpp
surface_splatting/py_surface_splatting/: setup.py.in  surface_splattingModule.cpp
surface_splatting/shader/: attribute_fs.glsl  attribute_vs.glsl  finalization_fs.glsl
test/: CMakeLists.txt  main_test.cpp
