# Module
set(GLVIZ_NAME glviz)

# Sources
file(GLOB_RECURSE GLVIZ_SOURCES RELATIVE ${GLVIZ_ROOT} *.cpp)
file(GLOB_RECURSE GLVIZ_HEADERS RELATIVE ${GLVIZ_ROOT} *.hpp)
file(GLOB_RECURSE GLVIZ_SHADERS RELATIVE ${GLVIZ_ROOT} *.glsl)

# Includes
include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
    ${GLVIZ_INCLUDE_DIR}
    ${GLVIZ_SOURCE_DIR}
)

# Shaders
set(GLVIZ_RESOURCES "${CMAKE_CURRENT_BINARY_DIR}/glviz_resources.hpp" "${CMAKE_CURRENT_BINARY_DIR}/glviz_resources.cpp")
wrap_resources("${GLVIZ_SHADERS}" ${GLVIZ_NAME} ${GLVIZ_RESOURCES})

# Target
add_library(${GLVIZ_NAME} STATIC ${GLVIZ_SOURCES} ${GLVIZ_HEADERS} ${GLVIZ_SHADERS} ${GLVIZ_RESOURCES})
set_property(TARGET ${GLVIZ_NAME} PROPERTY CXX_STANDARD 11)

# Libraries
EIGEN3_LINK(${GLVIZ_NAME})
GLEW_LINK(${GLVIZ_NAME})
OPENGL_LINK(${GLVIZ_NAME})
SDL2_LINK(${GLVIZ_NAME})
