# Module
set(SURFACE_SPLATTING_NAME surface_splatting)

# Directories
set(SURFACE_SPLATTING_SOURCE_DIR "${SURFACE_SPLATTING_ROOT}")

# Sources
file(GLOB_RECURSE SURFACE_SPLATTING_SOURCES RELATIVE ${SURFACE_SPLATTING_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE SURFACE_SPLATTING_HEADERS RELATIVE ${SURFACE_SPLATTING_SOURCE_DIR} *.hpp)
file(GLOB_RECURSE SURFACE_SPLATTING_SHADERS RELATIVE ${SURFACE_SPLATTING_SOURCE_DIR} *.glsl)

# Includes
include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
    ${GLVIZ_INCLUDE_DIR}
    ${GLVIZ_SOURCE_DIR}
)

# Shaders
set(SURFACE_SPLATTING_RESOURCES "${CMAKE_CURRENT_BINARY_DIR}/surface_splatting_resources.hpp" "${CMAKE_CURRENT_BINARY_DIR}/surface_splatting_resources.cpp")
wrap_resources("${SURFACE_SPLATTING_SHADERS}" ${SURFACE_SPLATTING_NAME} ${SURFACE_SPLATTING_RESOURCES})

# Target
add_executable(${SURFACE_SPLATTING_NAME} ${SURFACE_SPLATTING_SOURCES} ${SURFACE_SPLATTING_HEADERS} ${SURFACE_SPLATTING_SHADERS} ${SURFACE_SPLATTING_RESOURCES})
set_property(TARGET ${SURFACE_SPLATTING_NAME} PROPERTY CXX_STANDARD 11)
add_dependencies(${SURFACE_SPLATTING_NAME} glviz)
target_link_libraries(${SURFACE_SPLATTING_NAME} glviz)

# Libraries
ANTTWEAKBAR_LINK(${SURFACE_SPLATTING_NAME})
EIGEN3_LINK(${SURFACE_SPLATTING_NAME})
GLEW_LINK(${SURFACE_SPLATTING_NAME})
OPENGL_LINK(${SURFACE_SPLATTING_NAME})
SDL2_LINK(${SURFACE_SPLATTING_NAME})
